# SafarLink

./: README.md
Whatsapp bot/: .gitignore  README.md  formatter.js  index.js  package.json  pnpm-lock.yaml  ticketPdf.js
Whatsapp bot/.wwebjs_cache/: 2.3000.1033777971.html  2.3000.1033799541.html  2.3000.1033830679.html  2.3000.1033835506.html  2.3000.1033837939.html
chatbot/: bot.py  main.py  output.json  pyproject.toml  req.txt
chatbot/agents/: app_assistant.py  booking_agent.py  buddy.py  fare.py  map.py  route.py  tools.py  weather.py
chatbot/exports/: template.py
chatbot/frontend/: index.html
client/: .env  package.json  pnpm-lock.yaml
client/src/: App.tsx  index.css
client/src/api/: axios.ts  chatbotApi.ts
client/src/components/: AppAssistantChat.tsx  CurvyLine.tsx  Dock.css  Dock.tsx  Footer.tsx  HeroCarousel.tsx  IncidentReporter.tsx  JourneyChecklist.tsx  JourneyFeedbackModal.tsx  JourneyHeader.tsx  JourneyTimeline.tsx  KPIMetricsGrid.tsx  LocationInput.tsx  MapComponent.tsx  MetroHeroScroll.tsx  Navbar.tsx  PostRideForm.tsx  RideList.tsx  RouteCard.tsx  SOSButton.tsx  SafetyMonitor.tsx  ServicesGrid.tsx  ShareTrackingWidget.tsx  SharedAutoGroups.tsx  SharedAutoRequest.tsx  SustainabilityScoreboard.tsx  SyncUser.tsx  ThemeToggle.tsx  VerificationStatusStepper.tsx  WeatherBanner.tsx
client/src/components/ui/: accordion.tsx  badge.tsx  button.tsx
client/src/context/: SocketContext.tsx  ThemeContext.tsx
client/src/hooks/: useWeather.ts
client/src/pages/: AiRoutePlanner.tsx  BookingPage.tsx  Dashboard.tsx  DriverDashboard.tsx  FeedbackWall.tsx  Landing.tsx  LiveTracking.tsx  RouteDetails.tsx  SharedAutoPage.tsx  VehiclePooling.tsx
client/src/types/: appAssistant.ts  booking.ts  chatbotRoute.ts
client/src/utils/: geometry.ts
server/: .env  .gitignore  index.ts  nodemon.json  package.json  pnpm-lock.yaml
server/config/: swagger.ts
server/middleware/: auth.ts
server/models/: Incident.ts  JourneyFeedback.ts  PoolRide.ts  Ride.ts  RideRequest.ts  SharedAuto.ts  User.ts  UserFeedbackStats.ts
server/routes/: feedback.ts  incidents.ts  poolRides.ts  rides.ts  routes.ts  sharedAutoV2.ts  sharedAutos.ts  users.ts
server/socket/: index.ts
server/utils/: routeCalculations.ts
